--- a/index.html
+++ b/index.html
@@ -19,40 +19,149 @@
     <title>Modulars</title>
   </head>
   <body>
-    <div class="master" style="height: 1000px;">
+    <div class="master" style="height: 10000px">
       <!-- Header -->
       <header class="header fixed">
         <section class="main-content">
           <section class="header-main">
             <!-- Logo -->
             <article class="header-logo">
-             <a href="#"><img src="./asset/img/logo.svg" alt="logo-website" /></a>
+              <a href="#"
+                ><img src="./asset/img/logo.svg" alt="logo-website"
+              /></a>
             </article>
             <!-- Navigation -->
             <nav class="header-nav">
-                <ul>
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#About">About</a>
-                    </li>
-                    <li>
-                        <a href="#Blog">Blog</a>
-                    </li>
-                    <li>
-                        <a href="#Contact">Contact</a>
-                    </li>
-                </ul>
-            </nav>  
+              <ul>
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#About">About</a>
+                </li>
+                <li>
+                  <a href="#Blog">Blog</a>
+                </li>
+                <li>
+                  <a href="#Contact">Contact</a>
+                </li>
+              </ul>
+            </nav>
             <!-- Button -->
             <div class="action">
-                <a href="#!" class="btn">Sign Up</a>
+              <a href="#!" class="btn">Sign Up</a>
             </div>
           </section>
           <div class="active-light"></div>
         </section>
       </header>
+      <!-- Hero -->
+      <section class="hero">
+        <section class="main-content">
+          <section class="hero-main">
+            <section class="hero-info">
+              <summary class="hero-title">
+                <h1>We’re a creative design agency.</h1>
+              </summary>
+              <p>
+                A brilliant, modular agency template for startup’s build yours
+                toady.
+              </p>
+              <div class="action-hero">
+                <a href="#!" class="btn btn-hero">Get in touch</a>
+                <button class="action-play-video">
+                  <div class="img-block-play">
+                    <img
+                      class="support-btn"
+                      src="./asset/img/support-btn.svg"
+                      alt="support-btn"
+                    />
+                    <img
+                      class="play-btn"
+                      src="./asset/img/play-btn.svg"
+                      alt="play-btn"
+                    />
+                  </div>
+                  <span>Watch Video</span>
+                </button>
+              </div>
+            </section>
+            <section class="hero-img">
+              <div class="hero-list-img">
+                <figure class="hero-item-img">
+                  <img
+                    src="./asset/img/test1.jpg"
+                    alt="img-We’re a creative design agency."
+                  />
+                </figure>
+                <figure class="hero-item-img">
+                  <img
+                    src="./asset/img/test2.jpg"
+                    alt="img-We’re a creative design agency."
+                  />
+                </figure>
+                <figure class="hero-item-img">
+                  <img
+                    src="./asset/img/test3.jpg"
+                    alt="img-We’re a creative design agency."
+                  />
+                </figure>
+              </div>
+              <div class="action-design">
+                <img  src="./asset/img/flower.svg" alt="">
+                <img class="wire" src="./asset/img/wire.svg" alt="">
+              </div>
+              <div class="action-design-2">
+                <img  src="./asset/img/wire-2.svg" alt="">
+                <img class="flower-2" src="./asset/img/flower.svg" alt="">
+              </div>
+            </section>
+          </section>
+        </section>
+      </section>
+      <!-- Logo-media -->
+      <section class="logo-media">
+        <section class="main-content">
+          <section class="logo-media-main">
+            <section class="logo-media-list">
+              <figure class="logo-media-item">
+                <a href="#!">
+                   <span class="Google">Google</span>
+                </a>
+              </figure>
+              <figure class="logo-media-item">
+                <a href="#!">
+                  <img src="./asset/img/slack.svg" alt="">
+                </a>
+              </figure>
+              <figure class="logo-media-item ">
+                <img class="discor" src="./asset/img/discor.svg" alt="">
+                <a href="#!">
+                  <span class="Agworld">Agworld</span>
+                </a>
+              </figure>
+              <figure class="logo-media-item">
+                <a href="#!">
+                  <img src="./asset/img/hereku.svg" alt="">
+                </a>
+              </figure>
+              <figure class="logo-media-item">
+                <a href="#!">
+                  <img src="./asset/img/RioTinto.svg" alt="">
+                </a>
+              </figure>
+            </section>
+          </section>
+        </section>
+      </section>
+      <!-- Our service -->
+      <section class="service">
+        <section class="main-content">
+          <section class="service-main">
+            
+          </section>
+        </section>
+      </section>
     </div>
   </body>
 </html>
