--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <!-- Font Poppins -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,600;0,800;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,600;0,800;1,400&display=swap"
       rel="stylesheet"
     />
     <title>Modulars</title>
@@ -55,113 +55,366 @@
           <div class="active-light"></div>
         </section>
       </header>
-      <!-- Hero -->
-      <section class="hero">
-        <section class="main-content">
-          <section class="hero-main">
-            <section class="hero-info">
-              <summary class="hero-title">
-                <h1>We’re a creative design agency.</h1>
-              </summary>
-              <p>
-                A brilliant, modular agency template for startup’s build yours
-                toady.
-              </p>
-              <div class="action-hero">
-                <a href="#!" class="btn btn-hero">Get in touch</a>
-                <button class="action-play-video">
-                  <div class="img-block-play">
+      <main>
+        <!-- Hero -->
+        <section class="hero">
+          <section class="main-content">
+            <section class="hero-main">
+              <section class="hero-info">
+                <summary class="hero-title">
+                  <h1>We’re a creative design agency.</h1>
+                </summary>
+                <p>
+                  A brilliant, modular agency template for startup’s build yours
+                  toady.
+                </p>
+                <div class="action-hero">
+                  <a href="#!" class="btn btn-hero">Get in touch</a>
+                  <button class="action-play-video">
+                    <div class="img-block-play">
+                      <img
+                        class="support-btn"
+                        src="./asset/img/support-btn.svg"
+                        alt="support-btn"
+                      />
+                      <img
+                        class="play-btn"
+                        src="./asset/img/play-btn.svg"
+                        alt="play-btn"
+                      />
+                    </div>
+                    <span>Watch Video</span>
+                  </button>
+                </div>
+              </section>
+              <section class="hero-img">
+                <div class="hero-list-img">
+                  <figure class="hero-item-img">
                     <img
-                      class="support-btn"
-                      src="./asset/img/support-btn.svg"
-                      alt="support-btn"
+                      src="./asset/img/test1.jpg"
+                      alt="img-We’re a creative design agency."
                     />
+                  </figure>
+                  <figure class="hero-item-img">
                     <img
-                      class="play-btn"
-                      src="./asset/img/play-btn.svg"
-                      alt="play-btn"
+                      src="./asset/img/test2.jpg"
+                      alt="img-We’re a creative design agency."
                     />
+                  </figure>
+                  <figure class="hero-item-img">
+                    <img
+                      src="./asset/img/test3.jpg"
+                      alt="img-We’re a creative design agency."
+                    />
+                  </figure>
+                </div>
+                <div class="action-design">
+                  <img src="./asset/img/flower.svg" alt="" />
+                  <img class="wire" src="./asset/img/wire.svg" alt="" />
+                </div>
+                <div class="action-design-2">
+                  <img src="./asset/img/wire-2.svg" alt="" />
+                  <img class="flower-2" src="./asset/img/flower.svg" alt="" />
+                </div>
+              </section>
+            </section>
+          </section>
+        </section>
+        <!-- Logo-media -->
+        <section class="logo-media">
+          <section class="main-content">
+            <section class="logo-media-main">
+              <section class="logo-media-list">
+                <figure class="logo-media-item">
+                  <a href="#!">
+                    <span class="Google">Google</span>
+                  </a>
+                </figure>
+                <figure class="logo-media-item">
+                  <a href="#!">
+                    <img src="./asset/img/slack.svg" alt="" />
+                  </a>
+                </figure>
+                <figure class="logo-media-item">
+                  <img class="discor" src="./asset/img/discor.svg" alt="" />
+                  <a href="#!">
+                    <span class="Agworld">Agworld</span>
+                  </a>
+                </figure>
+                <figure class="logo-media-item">
+                  <a href="#!">
+                    <img src="./asset/img/hereku.svg" alt="" />
+                  </a>
+                </figure>
+                <figure class="logo-media-item">
+                  <a href="#!">
+                    <img src="./asset/img/RioTinto.svg" alt="" />
+                  </a>
+                </figure>
+              </section>
+            </section>
+          </section>
+        </section>
+        <!-- Our service -->
+        <section class="service">
+          <section class="main-content">
+            <section class="service-main">
+              <p class="decs-light">OUR SERVICES</p>
+              <section class="service-block">
+                <summary class="service-title title-light">
+                  <h2>We offer a wide range of design services</h2>
+                </summary>
+                <div class="action-service">
+                  <button>
+                    <svg
+                      width="22"
+                      height="13"
+                      viewBox="0 0 22 13"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M21 6.82353H0.999999M0.999999 6.82353L6.29412 1M0.999999 6.82353L6.29412 12"
+                        stroke="currentColor"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </button>
+                  <button>
+                    <svg
+                      width="22"
+                      height="12"
+                      viewBox="0 0 22 12"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1 6.29412H21M21 6.29412L15.7059 1M21 6.29412L15.7059 11"
+                        stroke="currentColor"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </button>
+                </div>
+              </section>
+              <section class="service-list">
+                <article class="service-item">
+                  <figure>
+                    <img src="./asset/img/studen-libbary1.jpg" alt="" />
+                  </figure>
+                  <section class="service-info">
+                    <h3>Branding</h3>
+                    <p>
+                      Create beautiful Agency website with Boluethat converts
+                      more visitors than any website.
+                    </p>
+                  </section>
+                </article>
+                <article class="service-item">
+                  <figure>
+                    <img src="./asset/img/studen-libbary2.jpg" alt="" />
+                  </figure>
+                  <section class="service-info">
+                    <h3>Web Design</h3>
+                    <p>
+                      Create beautiful Agency website with Boluethat converts
+                      more visitors than any website.
+                    </p>
+                  </section>
+                </article>
+                <article class="service-item">
+                  <figure>
+                    <img src="./asset/img/studen-libbary3.jpg" alt="" />
+                  </figure>
+                  <section class="service-info">
+                    <h3>Graphic Design</h3>
+                    <p>
+                      Create beautiful Agency website with Boluethat converts
+                      more visitors than any website.
+                    </p>
+                  </section>
+                </article>
+              </section>
+            </section>
+          </section>
+        </section>
+        <!-- Creative Team -->
+        <section class="creative">
+          <section class="main-content">
+            <section class="creative-main">
+              <div class="creative-left">
+                <figure class="img-left-main">
+                  <img
+                    src="./asset/img/support-team1.jpg"
+                    alt="support-team1"
+                  />
+                </figure>
+                <figure class="img-left-main">
+                  <img
+                    src="./asset/img/support-team2.jpg"
+                    alt="support-team2"
+                  />
+                </figure>
+                <div class="creative-light">
+                  <img src="./asset/img/flower.svg" alt="" />
+                  <img
+                    class="wire-creative"
+                    src="./asset/img/wire.svg"
+                    alt=""
+                  />
+                </div>
+                <!-- Child Block -->
+                <section class="all-design">
+                  <section class="title-block">
+                    <h4>All Desingners</h4>
+                    <p>Total Balance</p>
+                    <span>40%</span>
+                    <div class="action-light-creative"></div>
+                    <p class="loading">Loading...</p>
+                  </section>
+                  <section class="decs-block">
+                    <figure class="decs-block_img">
+                      <img src="./asset/img/button-check.svg" alt="" />
+                    </figure>
+                    <section class="decs-block-info">
+                      <p>Teams:</p>
+                      <section class="info-list">
+                        <figure>
+                          <img src="./asset/img/test1.jpg" alt="" />
+                        </figure>
+                        <figure>
+                          <img src="./asset/img/test2.jpg" alt="" />
+                        </figure>
+                        <figure>
+                          <img src="./asset/img/test3.jpg" alt="" />
+                        </figure>
+                        <figure>
+                          <img src="./asset/img/studen-libbary2.jpg" alt="" />
+                        </figure>
+                      </section>
+                    </section>
+                  </section>
+                </section>
+              </div>
+              <section class="creative-right">
+                <p class="decs-light">ABOUT US</p>
+                <summary class="creative-title">
+                  <h2>We are an extention of your creative team</h2>
+                </summary>
+                <p class="creative-decs">
+                  At the start of every project, we cusomizea detailed project
+                  plan together with you set exectationns ensure alighment and
+                  define key milestones and deiverbles.
+                </p>
+                <article class="creative-right-list">
+                  <section class="creative-right-item">
+                    <span>48%</span>
+                    <p>
+                      Are you strive for two things in design simplicity and
+                      clarity. Great design is born of those two things
+                    </p>
+                  </section>
+                  <section class="creative-right-item">
+                    <span>26%</span>
+                    <p>
+                      Are you strive for two things in design simplicity and
+                      clarity. Great design is born of those two things
+                    </p>
+                  </section>
+                </article>
+              </section>
+            </section>
+          </section>
+        </section>
+        <!-- Our Process -->
+        <section class="our-process">
+          <section class="main-content">
+            <section class="our-process-main">
+              <p class="decs-our-process decs-light">OUR PROCESS</p>
+              <h2 class="title-our-process title-light">
+                A simple ,yet effective three step process
+              </h2>
+              <section class="our-process-list">
+                <section
+                  class="our-process-title-item our-process-item-after our-process-item"
+                >
+                  <span>01.</span>
+                  <section class="our-process-project">
+                    <h4>Project idea</h4>
+                    <a href="#!">Learn More</a>
+                  </section>
+                  <figure class="img-block-our-process">
+                    <img src="./asset/img/boss.svg" alt="Boss-Loading" />
+                  </figure>
+                </section>
+                <section class="our-process-item our-process-item-after">
+                  <span>02.</span>
+                  <section class="our-process-project">
+                    <h4>Brainstormaing</h4>
+                    <section class="decs-our-process">
+                      We customse a ensure aligment and difine key mileones and
+                      defiverables experience tells us the best solutions are
+                      the ones deated with clients.
+                    </section>
+                  </section>
+                </section>
+                <section class="our-process-item our-process-item-after">
+                  <span>03.</span>
+                  <section class="our-process-project">
+                    <h4>Execution</h4>
+                    <section class="decs-our-process">
+                      We customse a ensure aligment and difine key mileones and
+                      defiverables experience tells us the best solutions are
+                      the ones deated with clients.
+                    </section>
+                  </section>
+                </section>
+              </section>
+            </section>
+          </section>
+        </section>
+        <!-- Quick-project -->
+        <section class="project">
+          <section class="main-content">
+            <section class="project-main">
+              <section class="project-info">
+                <h2 class="title-project title-light">
+                  A quick glance of our past projects
+                </h2>
+                <article class="project-decs">
+                  <p>
+                    Are you strive for the fast project simplicity and clarity.
+                    Great design is born of those two things.
+                  </p>
+                  <div class="form-project">
+                    <a href="">Browse all Projects</a>
+                    <svg
+                      width="22"
+                      height="12"
+                      viewBox="0 0 22 12"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1 6.29412H21M21 6.29412L15.7059 1M21 6.29412L15.7059 11"
+                        stroke="black"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
                   </div>
-                  <span>Watch Video</span>
-                </button>
-              </div>
-            </section>
-            <section class="hero-img">
-              <div class="hero-list-img">
-                <figure class="hero-item-img">
-                  <img
-                    src="./asset/img/test1.jpg"
-                    alt="img-We’re a creative design agency."
-                  />
-                </figure>
-                <figure class="hero-item-img">
-                  <img
-                    src="./asset/img/test2.jpg"
-                    alt="img-We’re a creative design agency."
-                  />
-                </figure>
-                <figure class="hero-item-img">
-                  <img
-                    src="./asset/img/test3.jpg"
-                    alt="img-We’re a creative design agency."
-                  />
-                </figure>
-              </div>
-              <div class="action-design">
-                <img  src="./asset/img/flower.svg" alt="">
-                <img class="wire" src="./asset/img/wire.svg" alt="">
-              </div>
-              <div class="action-design-2">
-                <img  src="./asset/img/wire-2.svg" alt="">
-                <img class="flower-2" src="./asset/img/flower.svg" alt="">
-              </div>
+                </article>
+              </section>
+              <video src="https://www.youtube.com/watch?v=Ln_3AVoBRLk"></video>
             </section>
           </section>
         </section>
-      </section>
-      <!-- Logo-media -->
-      <section class="logo-media">
-        <section class="main-content">
-          <section class="logo-media-main">
-            <section class="logo-media-list">
-              <figure class="logo-media-item">
-                <a href="#!">
-                   <span class="Google">Google</span>
-                </a>
-              </figure>
-              <figure class="logo-media-item">
-                <a href="#!">
-                  <img src="./asset/img/slack.svg" alt="">
-                </a>
-              </figure>
-              <figure class="logo-media-item ">
-                <img class="discor" src="./asset/img/discor.svg" alt="">
-                <a href="#!">
-                  <span class="Agworld">Agworld</span>
-                </a>
-              </figure>
-              <figure class="logo-media-item">
-                <a href="#!">
-                  <img src="./asset/img/hereku.svg" alt="">
-                </a>
-              </figure>
-              <figure class="logo-media-item">
-                <a href="#!">
-                  <img src="./asset/img/RioTinto.svg" alt="">
-                </a>
-              </figure>
-            </section>
-          </section>
-        </section>
-      </section>
-      <!-- Our service -->
-      <section class="service">
-        <section class="main-content">
-          <section class="service-main">
-            
-          </section>
-        </section>
-      </section>
+      </main>
     </div>
   </body>
 </html>
